Bug 62695 - [5.0 Regression] internal compiler error: in get_constraint_for_component_ref, at tree-ssa-structalias.c:3189
Summary: [5.0 Regression] internal compiler error: in get_constraint_for_component_ref...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 5.0
: P3 normal
Target Milestone: 5.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-02 05:29 UTC by Joost VandeVondele
Modified: 2014-09-02 08:23 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work: 4.9.0
Known to fail: 5.0
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joost VandeVondele 2014-09-02 05:29:19 UTC
A recent trunk regression between good: r214776 and bad r214808, suspect r214795

> gfortran  -c -fipa-pta -O1  bug.f90
bug.f90:23:0: 

   END SUBROUTINE dbcsr_mp_make_env
 ^
internal compiler error: in get_constraint_for_component_ref, at tree-ssa-structalias.c:3189
0xc537eb get_constraint_for_component_ref
	../../gcc/gcc/tree-ssa-structalias.c:3189
0xc537eb get_constraint_for_1
	../../gcc/gcc/tree-ssa-structalias.c:3454
0xc547f2 get_constraint_for_address_of
	../../gcc/gcc/tree-ssa-structalias.c:3325
0xc5330f get_constraint_for_1
	../../gcc/gcc/tree-ssa-structalias.c:3393
0xc547f2 get_constraint_for_address_of
	../../gcc/gcc/tree-ssa-structalias.c:3325
0xc59d09 find_func_clobbers
	../../gcc/gcc/tree-ssa-structalias.c:5042
0xc59d09 ipa_pta_execute
	../../gcc/gcc/tree-ssa-structalias.c:7180

> cat bug.f90
MODULE dbcsr_dist_operations
  TYPE dbcsr_mp_obj
  END TYPE dbcsr_mp_obj
  INTERFACE
    SUBROUTINE dbcsr_mp_new(mp_env, pgrid, mp_group, mynode, numnodes, myprow,&
         mypcol)
      IMPORT
      TYPE(dbcsr_mp_obj), INTENT(OUT)          :: mp_env
      INTEGER, DIMENSION(0:, 0:), INTENT(IN)   :: pgrid
    END SUBROUTINE dbcsr_mp_new
  END INTERFACE
CONTAINS
  SUBROUTINE dbcsr_mp_make_env (mp_env, mp_group, &
       nprocs, pgrid_dims, error)
    TYPE(dbcsr_mp_obj), INTENT(OUT)          :: mp_env
      OPTIONAL                               :: pgrid_dims
    INTEGER                                  :: error_handle, group, mynode, &
                                                numnodes, pcol, prow
    INTEGER, ALLOCATABLE, DIMENSION(:, :)    :: pgrid
    INTEGER, DIMENSION(2)                    :: coord, myploc, npdims
    CALL dbcsr_mp_new (mp_env, pgrid, group, mynode, numnodes,&
         myprow=myploc(1), mypcol=myploc(2))
  END SUBROUTINE dbcsr_mp_make_env
END MODULE dbcsr_dist_operations
Comment 1 Richard Biener 2014-09-02 08:22:38 UTC
Fixed.
Comment 2 Richard Biener 2014-09-02 08:23:05 UTC
Author: rguenth
Date: Tue Sep  2 08:22:33 2014
New Revision: 214810

URL: https://gcc.gnu.org/viewcvs?rev=214810&root=gcc&view=rev
Log:
2014-09-02  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/62695
	* tree-ssa-structalias.c (find_func_clobbers): Add missing
	vector truncate.

	* gfortran.dg/pr62695.f90: New testcase.

Added:
    trunk/gcc/testsuite/gfortran.dg/pr62695.f90
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/tree-ssa-structalias.c