2014-09-02  Richard Biener  <rguenther@suse.de>

PR tree-optimization/62695
	* tree-ssa-structalias.c (find_func_clobbers): Add missing
	vector truncate.

	* gfortran.dg/pr62695.f90: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@214810 138bc75d-0d04-0410-961f-82ee72b054a4